@@ -2,10 +2,11 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.19 2004/11/10 15:32:44 port001 Exp $
+# $Id: ChangeLog,v 1.20 2004/11/10 16:20:02 port001 Exp $
 
 10 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * Added a timeout check to wait_threads()
+ * Added a HeaderTmplSent bool to the State module
 
 09 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * Implemented a basic threading class
